# vector

./: .env.example  .gitignore  AGENT_CLEANUP_COMPLETE.md  API_ORCHESTRATION_EXAMPLE.md  CHAT_IMPLEMENTATION_SUMMARY.md  CHAT_SERVICE_REFACTOR.md  CHAT_TESTING_GUIDE.md  CHAT_VISUAL_LAYOUT.md  CONTEXT_ARCHITECTURE.md  CONTEXT_REFACTOR_COMPLETE.md  DOCLING_ADAPTER_COMPLETE.md  FASTAPI_GRADIO_MIGRATION_COMPLETE.md  FASTAPI_IMPLEMENTATION_COMPLETE.md  GRADIO_CHAT_TAB.md  LEGACY_CLEANUP_COMPLETE.md  LICENSE  METRICS_FIX.md  MIGRATION_GUIDE.md  NOTICE  PROTOCOLS_IMPLEMENTATION.md  PYDANTIC_AI_IMPLEMENTATION_COMPLETE.md  PYDANTIC_AI_REFACTOR_SUMMARY.md  README.md  README_COMPLETE_SETUP.md  RETRIEVAL_REFACTOR_COMPLETE.md  WEB_UPDATE_STATUS.md  agent_test.py  chat_demo.py  chat_ui_preview.py  check_payload.py  check_pydantic_metrics.py  collection_metadata.json  collections_metadata.json  config.yaml  core-pipeline.drawio  debug_collections.py  debug_metadata.py  demo_vector_search.py  gui.md  migrate_chunk_index_simple.py  (+37 more)
.github/workflows/: qdrant-keepalive.yml
LICENSES/: Docling.txt
apps/gradio/: service.py
config/: __init__.py  research.yaml  settings.yaml  topics.yaml
regscout/: __init__.py  __main__.py  exceptions.py  interfaces.py
regscout/ai/: __init__.py
regscout/cli/: __init__.py  main.py  parser.py
regscout/core/: __init__.py  agent.py  database.py  embedder.py  processor.py
regscout/utils/: __init__.py  files.py  formatting.py  text.py
regscout/web/: __init__.py  main.py  styles.css
src/agents/: research_agent.py
src/ai_models/: __init__.py  base.py  factory.py  openai_model.py
src/cli/: __init__.py  commands.py  commands_backup.py  parsers.py
src/data_pipeline/: embedder.py  file_processing.py  vector_database.py
src/services/: __init__.py
src/services/ai_models/: __init__.py  base.py  openai_model.py
src/web/: app.py
test_output2/: p453.md
vector/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  interfaces.py  models.py  ports.py  settings.py
vector/agent/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  agent.py  agents.py  chat_service.py  cli.py  deps.py  mcp_server.py  memory.py  models.py  pipeline.py  prompting.py  retrieval.py  steps.py  tools.py
vector/ai/: README.md  __init__.py  base.py  factory.py  openai.py
vector/api/: __init__.py  app.py  deps.py  schemas.py
vector/cli/: README.md  __init__.py  commands.py  main.py  parser.py
vector/context/: __init__.py  orchestrator.py  pipeline.py  steps.py
vector/core/: README.md  __init__.py  __main__.py  agent.py  artifacts.py  artifacts_new.py  artifacts_old.py  chunker.py  chunking.py  cli.py  collection_manager.py  converter.py  core-notes.md  database.py  document_manager.py  document_registry.py  document_utils.py  embedder.py  filesystem.py  models.py  pipeline.py  processor.py  utils.py  vector_store.py  vector_store_refactor.md
vector/embedders/: __init__.py  sentence_transformer.py
vector/pipeline/: __init__.py  chunker.py  converter.py  docling_adapter.py  ingestion.py
vector/retrieval/: RETRIEVAL_GUIDE.md  __init__.py  pipeline.py  steps.py
vector/search/: __init__.py  dsl.py  service.py  utils.py
vector/stores/: __init__.py  base.py  factory.py  qdrant.py
vector/ui/: __init__.py  __main__.py  app.py  components.py  handlers.py  registry.py  service.py  styles.css
vector/utils/: __init__.py  files.py  formatting.py  text.py  thumbnails.py  utils.py
vector/web/: ARCHITECTURE.md  README_PLACEHOLDER.md  __init__.py  __main__.py  components.py  handlers.py  main.py  registry.py  service.py  styles.css
vector_registry/: gsmm_75_85.json
(+21 files in other folders)
