[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regscout"
version = "2.0.0"
description = "AI-Powered Document Processing & Search for Municipal Documents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RegScout Team"}
]
keywords = ["ai", "documents", "search", "municipal", "regulations", "ordinances"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Government",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "docling",
    "docling-core", 
    "transformers",
    "torch",
    "sentence-transformers",
    "qdrant-client",
    "numpy",
    "PyYAML",
    "python-dotenv",
    "openai",
    "gradio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
regscout = "regscout.cli.main:main"
regscout-web = "regscout.web.main:main"

[project.urls]
Homepage = "https://github.com/dkylewillis/regscout"
Repository = "https://github.com/dkylewillis/regscout.git"
Issues = "https://github.com/dkylewillis/regscout/issues"

[tool.setuptools.packages.find]
include = ["regscout*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
