[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector"
version = "2.0.0"
description = "AI-Powered Document Processing & Search"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Vector Team"}
]
keywords = ["ai", "documents", "search", "vector", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "docling",
    "docling-core", 
    "transformers",
    "torch",
    "sentence-transformers",
    "qdrant-client",
    "numpy",
    "PyYAML",
    "python-dotenv",
    "openai",
    "gradio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
vector-core = "vector.core.cli:main"
vector-agent = "vector.agent.cli:main"
vector-web = "vector.web.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/vector"
Repository = "https://github.com/yourusername/vector.git"
Issues = "https://github.com/yourusername/vector/issues"

[tool.setuptools.packages.find]
include = ["vector*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
